<resources>
    <string name="app_name">Cesta Básica - Pesquisas</string>
    <string name="login_titulo">Login</string>
    <string name="bnt_logar">Entrar</string>
    <string name="btn_enviar">Enviar</string>
    <string name="adicionar_pequisa_titulo">Nova Pesquisa</string>
    <string name="btn_listar">Listar</string>
    <string name="listar_pesquisas_titulo">Pesquisas Realizadas</string>
    <string name="btn_adicionar">Adicionar</string>
    <string name="novo_user_titulo">Novo Usuário</string>
    <string name="btn_new_user">Cadastre-se</string>
    <string name="list_id">ID</string>
    <string name="list_produto">Produto</string>
    <string name="list_prod_valor">Valor</string>
    <string name="classe_produto">Classe</string>
    <string name="item_produto">Item</string>
    <string name="grupo_produto">Grupo</string>
    <string name="produtos_cadastrados">Produtos Cadastrados</string>
    <string name="listar_produtos_titulo">Produtos Cadastrados</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
</resources>
