<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnl_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NovaPesquisaActivity">

    <!-- Geral -->
    <LinearLayout
        android:id="@+id/layout_nova_pesquisa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/listar_pesquisas_titulo"
            android:textAppearance="?android:textAppearanceLargeInverse" /> <!-- Inverte a cor -->

        <!-- Conteúdo -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="447dp"
            android:orientation="vertical"
            android:paddingTop="20dp">


            <TextView
                android:id="@+id/txtId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_id" />

            <TextView
                android:id="@+id/txt_prod_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_produto" />

            <TextView
                android:id="@+id/txt_prod_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_prod_valor" />
        </LinearLayout>
        <!-- Fim conteúdo -->


    </LinearLayout>
</ScrollView>