<?xml version="1.0" encoding="utf-8"?><!-- Barra de Rolagem -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".LoginActivity">

    <!-- Geral -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/cesta_icon_layer" />

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/login_titulo"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="?android:textAppearanceLargeInverse" /> <!-- Inverte a cor -->

        <!-- Conteúdo -->

        <!-- Fim conteúdo -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/nome_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/valor_produto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_entrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/bnt_logar"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btn_esqueceu_senha"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="1dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/esqueceu_senha"
                android:textColor="@android:color/holo_orange_dark" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>