<?xml version="1.0" encoding="utf-8"?><!-- Barra de Rolagem -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".MainActivity">

    <!-- Geral -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/cesta_icon_layer" />

        <!-- Nova Pesquisa -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:orientation="vertical">
            <!--
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bolo" />
            -->
            <!-- Título -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/adicionar_pequisa_titulo"
                android:textAppearance="?android:textAppearanceLarge" /> <!-- "textAppearanceLarge" para títulos -->

            <!-- Subtítulo -->
            <!--        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="16dp"
                            android:paddingTop="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/receita_bolo_subtitulo"
                            android:textAppearance="?android:textAppearanceMedium" />     "textAppearanceMedium" para subtítulos -->

            <Button
                android:id="@+id/btn_tela_adicionar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/btn_adicionar"
                android:textColor="@android:color/holo_green_light" />


        </LinearLayout>
        <!-- Fim Nova Pesquisa -->

        <!-- Editar Pesquisa -->
        <!-- Fim Editar Pesquisa -->

        <!-- Excluir Pesquisa -->
        <!-- Fim Excluir Pesquisa -->

        <!-- Todas as Pesquisas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:orientation="vertical">
            <!--
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bolo" />
            -->

            <!-- Título -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/listar_pesquisas_titulo"
                android:textAppearance="?android:textAppearanceLarge" /> <!-- "textAppearanceLarge" para títulos -->

            <Button
                android:id="@+id/btn_listar_pesquisas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/btn_listar"
                android:textColor="@android:color/holo_orange_light" />


        </LinearLayout>
        <!-- Fim Todas as Pesquisas -->

        <!-- Todos os Produtos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:orientation="vertical">
            <!--
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bolo" />
            -->

            <!-- Título -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/listar_produtos_titulo"
                android:textAppearance="?android:textAppearanceLarge" /> <!-- "textAppearanceLarge" para títulos -->

            <Button
                android:id="@+id/btn_listar_produtos"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:text="@string/btn_listar"
                android:textColor="@android:color/holo_blue_bright" />


        </LinearLayout>
        <!-- Fim Todos os Produtos -->
    </LinearLayout>
    <!-- Fim Geral -->
</ScrollView>